--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ La presenza di decorazioni color oro brillante, ricchi affreschi e marmi di gran
 								</td>
 							</tr>
 								<td>
-									<div style="padding:35px">0
+									<div style="padding:35px">
 										<a href="https://nisch-oss.github.io/barocco/estasi.html"><img src="estasi.PNG" height="200" width="200"></a>
 									</div>
 									<div style="padding:35px"> 
